--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -9,7 +9,12 @@
         <a href="{{ path('create_project') }}">Créer un projet</a>
 
         {% for project in projects %}
-            <p>{{ project.name }}</p>
+            <h1>Nom du projet : {{ project.name }}</h1>
+            <p>Description du projet : {{ project.description }}</p>
+            <div>
+                <img src="{{ project.image }}" alt="">
+            </div>
+            <p>Date de création du projet : {{ project.createdAt | date('d/m/y h:i:s') }}</p>
         {% endfor %}
 
     </div>
