--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,3 +2,25 @@ body {
     background-color: rgba(32, 32, 42, 1);
     color: white;
 }
+
+.button-create {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 6px;
+    text-decoration: none;
+    border-radius: 1.5rem;
+    background-color: white;
+    border: solid 2px black;
+    color: black;
+    transition: color 0.3s, background-color 0.3s;
+}
+
+.button-create:hover {
+    background-color: black;
+    color: white;
+    border: solid 2px white;
+}
+
+.button-create:active {
+    color: pink;
+}
