--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -6,10 +6,12 @@
 
     <div class="example-wrapper">
 
-        <a href="{{ path('create_project') }}">Créer un projet</a>
-
+        <div class="d-flex justify-content-around">
+            <h1>Il y a {{ projects | length }} projets actuellement.</h1>
+            <a class="button-create" href="{{ path('create_project') }}">Créer un projet</a>
+        </div>
         {% for project in projects %}
-            <h1>Nom du projet : {{ project.name }}</h1>
+            <h2>Nom du projet : {{ project.name }}</h2>
             <p>Description du projet : {{ project.description }}</p>
             <p>Tags :</p>
             <ul>
