--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,6 +36,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_project') }}">Projets</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_task') }}">Tâches</a>
+                    </li>
                 </ul>
 
                 <!-- Search Form -->
